--- a/tmux_linux.conf
+++ b/tmux_linux.conf
@@ -48,7 +48,7 @@ bind-key -t vi-copy 'r' rectangle-toggle
 #set -g status-right "#[fg=yellow]#(uptime | cut -d ',' -f 2-)"
 
 # Highlight active window
-set-window-option -g window-status-current-bg red
+set-window-option -g window-status-current-bg "#df5f00"
 
 set -g mode-mouse on
 set -g mouse-resize-pane on
@@ -57,3 +57,12 @@ set -g mouse-select-window on
 set -g history-limit 10000000
 
 setw -g automatic-rename
+
+# Don't repeat keys when selecting panes
+bind-key Up select-pane -U
+bind-key Down select-pane -D
+bind-key Left select-pane -L
+bind-key Right select-pane -R
+
+# eliminate accidental window swaps
+unbind-key C-a
