--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
 	url = git@github.com:akaivola/oh-my-zsh.git
+[submodule "vim-dot-files"]
+	path = vim-dot-files
+	url = git@github.com:akaivola/vim-dot-files.git
