--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "emacs/.live-packs/akaivola-pack/lib/arduino-mode"]
 	path = emacs/.live-packs/akaivola-pack/lib/arduino-mode
 	url = git@github.com:bookest/arduino-mode.git
+[submodule "emacs/.live-packs/akaivola-pack/lib/slime"]
+	path = emacs/.live-packs/akaivola-pack/lib/slime
+	url = https://github.com/slime/slime
