--- a/tmux.conf
+++ b/tmux.conf
@@ -42,7 +42,8 @@ bind-key l next-layout
 setw -g mode-keys vi
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
-bind-key -t vi-copy 'r' rectangle-toggle
+bind-key -t vi-copy 'C-v' rectangle-toggle
+bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy" # mac os x clipboard support
 
 # Activity monitoring
 #setw -g monitor-activity on
