--- a/tmux.conf
+++ b/tmux.conf
@@ -55,10 +55,6 @@ bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy" # mac os x clipb
 # Highlight active window
 set-window-option -g window-status-current-bg "#df5f00"
 
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
 set -g history-limit 10000000
 
 setw -g automatic-rename
@@ -71,3 +67,7 @@ bind-key Right select-pane -R
 
 # eliminate accidental window swaps
 unbind-key C-a
+
+# Mouse
+set-option -g mouse on
+bind -n WheelUpPane copy-mode
