--- a/tmux.conf
+++ b/tmux.conf
@@ -28,7 +28,8 @@ set -g status-right "#[fg=green]#H #[fg=yellow]%d.%m. #[fg=white]%H:%M"
 # Rather than constraining window size to the maximum size of any client
 # connected to the *session*, constrain window size to the maximum size of any
 # client connected to *that window*. Much more reasonable.
-setw -g aggressive-resize on
+# disabled for iTerm integration
+#setw -g aggressive-resize on
 
 # Allows us to use C-a a <command> to send commands to a TMUX session inside
 # another TMUX session
@@ -40,13 +41,19 @@ bind-key l next-layout
 
 # Vim bindings
 setw -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
-bind-key -t vi-copy 'C-v' rectangle-toggle
-bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy" # mac os x clipboard support
+
+bind-key -T edit-mode-vi Up send-keys -X history-up
+bind-key -T edit-mode-vi Down send-keys -X history-down
+unbind-key -T copy-mode-vi Space     ;   bind-key -T copy-mode-vi v send-keys -X begin-selection
+unbind-key -T copy-mode-vi Enter     ;   bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+unbind-key -T copy-mode-vi C-v       ;   bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+unbind-key -T copy-mode-vi [         ;   bind-key -T copy-mode-vi [ send-keys -X begin-selection
+unbind-key -T copy-mode-vi ]         ;   bind-key -T copy-mode-vi ] send-keys -X copy-selection
+
 
 # Activity monitoring
 #setw -g monitor-activity on
+#B
 #set -g visual-activity on
 
 # Example of using a shell command in the status line
@@ -64,6 +71,26 @@ bind-key Up select-pane -U
 bind-key Down select-pane -D
 bind-key Left select-pane -L
 bind-key Right select-pane -R
+
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+bind-key J resize-pane -D
+bind-key K resize-pane -U
+bind-key H resize-pane -L
+bind-key L resize-pane -R
+
+
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
 # eliminate accidental window swaps
 unbind-key C-a
