Update tmux to 2.9

--- a/tmux.conf
+++ b/tmux.conf
@@ -60,7 +60,7 @@ unbind-key -T copy-mode-vi ]         ;   bind-key -T copy-mode-vi ] send-keys -X
 #set -g status-right "#[fg=yellow]#(uptime | cut -d ',' -f 2-)"
 
 # Highlight active window
-set-window-option -g window-status-current-bg "#df5f00"
+set-window-option -g window-status-current-style bg="#df5f00"
 
 set -g history-limit 10000000
 
