--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 # fix pbcopy, pbpaste in mac os x
-set-option -g default-command "reattach-to-user-namespace -l zsh"
-bind y run-shell "reattach-to-user-namespace -l zsh -c 'tmux show-buffer | pbcopy'"
+#set-option -g default-command "reattach-to-user-namespace -l fish"
+#bind y run-shell "reattach-to-user-namespace -l fish -c 'tmux show-buffer | pbcopy'"
+set-option -g default-shell /usr/local/opt/zsh/bin/zsh
 
 # C-b is not acceptable -- Vim uses it
 set-option -g prefix C-a
@@ -98,3 +99,6 @@ unbind-key C-a
 # Mouse
 set-option -g mouse on
 bind -n WheelUpPane copy-mode
+
+# Clear screen and history
+bind -Troot C-l send-keys C-l\; clear-history
